--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
+/* 默认选定的CSS */
 *{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 body{
@@ -6,31 +9,71 @@ body{
     padding: 10px;
     background: #f1f1f1;
 }
-/* 头部标题 */
-.headr{
-    text-align: center;
-    padding: 30px;
-    background-color: white;
+ul li{
+    list-style-type: none;
 }
-.headr h1{
-    font-size: 50px;
+a{
+    text-decoration: none;
+    color: white;
+}
+a:hover{
+    color:  rgb(167, 167, 167);
+}
+p{
+    margin-top: 20px;
 }
 /* 导航条 */
-.topnav{
+.headra{
+    float: left;
+    width: 100%;
     overflow: hidden;
     background-color: #333;
 }
-.topnav a{
+.headra .topdiv{
     float: left;
     display: block;
-    text-decoration: none;
-    color: #f2f2f2;
+    text-align: left;
+    padding: 20px;
+    width: 25%;
+}
+
+.headra .topdiv2{
+    float: right;
+    display: none;
+    text-align: left;
+    padding: 20px;
+    width: 10%;
+}
+
+.headra .topnav {
+    float: right;
+    display: block;
     text-align: center;
+    width: 75%;
+}
+
+.headra .topnav ul li {
+    overflow: hidden;
+    float: right;
+}
+.headra .topnav ul li a{
+    display: block;
+    margin-top: -20;
     padding: 20px;
 }
-.topnav a:hover{
-    background-color: #ddd;
-    color: black;
+.headra .topnav2 {
+    float: right;
+    display: none;
+    text-align: center;
+    width: 75%;
+}
+.headra .topnav2 ul li {
+    overflow: hidden;
+    float: right;
+}
+.headra .topnav2 ul li a{
+    display: block;
+    padding: 20px;
 }
 /* 创建两列 Left column */
 .leftcolumn{
@@ -44,17 +87,29 @@ body{
     background-color: #f1f1f1;
     padding-left: 20px;
 }
-/* 图像部分 */
-.fakeimg{
-    background-color: #aaa;
-    width: 100%;
-    padding: 20px;
-}
+
 /* 文章卡片效果 */
-.card{
+.card1{
     background-color: white;
     padding: 20px;
     margin-top: 20px;
+}
+.card1 img{
+    clear: both;
+    display: block;
+    margin: auto;
+}
+.card2{
+    background-color:#24292e;
+    padding: 20px;
+    margin-top: 20px;
+    color: #f6f8fa;
+    overflow: hidden;
+}
+.card2 a{
+    width: 100%;
+    float: left;
+    padding: 20px;
 }
 /* 列后面清除浮动 */
 .row::after{
@@ -70,16 +125,27 @@ body{
     margin-top: 20px;
 }
 /* 响应式布局 —— 屏幕尺寸小于800px时，两列布局改为上下布局 */
-@media screen and (max-width: 800px){
+@media screen and (max-width: 850px){
     .leftcolumn, .rightcolumn{
         width: 100%;
         padding: 0;
     }
+    .card2{
+        display: none;
+    }
+    .headra .topdiv{
+        width: 75%;
+    }
+    .headra .topnav {
+        display: none;
+        /* float: none;
+        width: 100%; */
+    }
+    .headra .topdiv2{
+        display: block;
+    }
 }
 /* 响应式布局 —— 屏幕尺寸小于400px时，导航布局改为上下布局 */
-@media screen and (max-width: 500px){
-    .topnav a{
-        float: none;
-        width: 100%;
-    }
+@media screen and (max-width: 1900px){
+   
 }
