--- a/css/base.css
+++ b/css/base.css
@@ -85,7 +85,7 @@ body {
     background-color: #282828;
 }
 
-#li-footer .col-md-12 {
+#li-footer .row {
     position: relative;
     font-weight: 400;
     font-size: 16px;
@@ -93,14 +93,12 @@ body {
     padding: 50px 15px;
 
 }
-
-.footer-card {
-    position: absolute;
-    top: 50px;
-    right: 0px;
+.footer-title{
+    padding-bottom: 20px;
 }
+
 
 .footer-card a {
     color: #e0e0e0;
-    padding: 0 10px;
+    padding: 10px 0;
 }
