--- a/css/index.css
+++ b/css/index.css
@@ -78,6 +78,9 @@
     height: 220px;
     background-color: #008c6c;
 }
+.iamge-box:hover{
+    background-color: #0a5533;
+}
 
 .iamge-title {
     position: absolute;
@@ -95,11 +98,13 @@
 .nr-card {
     background-color: #008c6c;
     margin-bottom: 15px;
+    padding: 20px 20px;
 }
 
 .card-title,
 .card-content {
     position: relative;
+    padding: 15px 0;
 }
 .card-title h2{
     margin: 0;
@@ -110,6 +115,11 @@
 
 }
 
-/* .content-text h3 {
+.content-iamge{
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    line-height: 200px;
+    background-color: antiquewhite;
 
-} */
+}
